# text-brush

./: README.md
app/: app.json  package-lock.json  package.json
app/screens/: TabOneScreen.tsx
server/: pyproject.toml
server/text_brush/: app.py
tests/: test_text_brush.py
text_brush/: app.py
