[tool.poetry]
name = "text-brush"
version = "0.1.0"
description = ""
authors = ["Iliya Zhechev <iliya.zhechev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
torch = "^1.12.1"
diffusers = "^0.4.1"
transformers = "^4.22.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
